--- a/src/header/Header.module.css
+++ b/src/header/Header.module.css
@@ -1,13 +1,15 @@
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin: -8px;
+    margin: 0px;
+    border-bottom: 1px solid;
+    border-color: rgb(105, 124, 140);
   }
   
   .card {
     margin: 4px;
     border: 1px solid;
-    border-color: aliceblue;
+    border-color: rgb(105, 124, 140);
     border-radius: 10px;
     padding: 15px;
     padding-top: 5px;
@@ -21,4 +23,8 @@
   .card p {
     margin: 0;
     text-align: left;
+  }
+
+  .live {
+    height: 18px;
   }
